--- a/showwindow.ui
+++ b/showwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>541</width>
-    <height>419</height>
+    <height>529</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -52,6 +52,13 @@
     <widget class="QRadioButton" name="musicianButton">
      <property name="text">
       <string>Музыканты</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1">
+    <widget class="QPushButton" name="showCompButton">
+     <property name="text">
+      <string>Смотреть сведения о произведении</string>
      </property>
     </widget>
    </item>
