--- a/showwindow.ui
+++ b/showwindow.ui
@@ -17,7 +17,7 @@
    <item row="4" column="0">
     <widget class="QLabel" name="countLabel">
      <property name="text">
-      <string>Итого найдено пластинок: 0</string>
+      <string>Итого найдено исполнений: 0</string>
      </property>
     </widget>
    </item>
@@ -39,7 +39,11 @@
     <widget class="QComboBox" name="comboBox"/>
    </item>
    <item row="3" column="0" colspan="2">
-    <widget class="QTableView" name="tableView"/>
+    <widget class="QTableView" name="tableView">
+     <property name="editTriggers">
+      <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
+    </widget>
    </item>
    <item row="1" column="0">
     <widget class="QRadioButton" name="ensembleButton">
