--- a/bookwindow.ui
+++ b/bookwindow.ui
@@ -174,6 +174,19 @@
      <string>Отмена</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="defaultFullButton">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>270</y>
+      <width>241</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Заполнить данными по умолчанию</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
