--- a/ratingwindow.ui
+++ b/ratingwindow.ui
@@ -58,6 +58,9 @@
      <height>441</height>
     </rect>
    </property>
+   <property name="editTriggers">
+    <set>QAbstractItemView::NoEditTriggers</set>
+   </property>
   </widget>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
