--- a/mainmenu.ui
+++ b/mainmenu.ui
@@ -31,7 +31,7 @@
    <item row="2" column="0" colspan="2">
     <widget class="QRadioButton" name="showMusicButton">
      <property name="text">
-      <string>Показать музыкальные произведения заданного ансамбля или исполнителя</string>
+      <string>Показать музыкальные исполнения заданного ансамбля или исполнителя</string>
      </property>
     </widget>
    </item>
@@ -39,13 +39,6 @@
     <widget class="QRadioButton" name="showDiscButton">
      <property name="text">
       <string>Показать пластинки заданного ансамбля или исполнителя</string>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="0">
-    <widget class="QRadioButton" name="showRatingButton">
-     <property name="text">
-      <string>Показать лидеров продаж текущего года</string>
      </property>
     </widget>
    </item>
@@ -74,6 +67,13 @@
     <widget class="QPushButton" name="exitButton">
      <property name="text">
       <string>Выйти из портала</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0" colspan="2">
+    <widget class="QRadioButton" name="showRatingButton">
+     <property name="text">
+      <string>Показать лидеров продаж прошлого или текущего года</string>
      </property>
     </widget>
    </item>
