--- a/inputdatawindow.ui
+++ b/inputdatawindow.ui
@@ -294,6 +294,9 @@
      <height>261</height>
     </rect>
    </property>
+   <property name="selectionBehavior">
+    <enum>QAbstractItemView::SelectRows</enum>
+   </property>
   </widget>
   <widget class="QPushButton" name="addPerfButton">
    <property name="geometry">
