--- a/perfomancewindow.ui
+++ b/perfomancewindow.ui
@@ -35,6 +35,9 @@
      <height>251</height>
     </rect>
    </property>
+   <property name="selectionBehavior">
+    <enum>QAbstractItemView::SelectRows</enum>
+   </property>
   </widget>
   <widget class="QPushButton" name="okButton">
    <property name="geometry">
